[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["Niilo Kuronen <niilo.kuronen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
